--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -22,5 +22,5 @@ markdown_extensions:
 #   - https://unpkg.com/katex@0/dist/katex.min.js
 #   - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
 
-# extra_css:
-#   - https://unpkg.com/katex@0/dist/katex.min.css
+extra_css:
+  - docs/css/es.css
