--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: ZDocs
 nav:
   - Home: index.md
-  - About: about.md
+  - font.css: fontcss.md
 theme: readthedocs
 
 # use_directory_urls: false
@@ -24,3 +24,4 @@ markdown_extensions:
 
 extra_css:
   - docs/css/es.css
+  - docs/css/font.css
